--- a/figma/ZEN/sass/section1.sass
+++ b/figma/ZEN/sass/section1.sass
@@ -1,4 +1,4 @@
-.sectionZEN-common
+.ZEN-section__common
     margin-top: 15px
     display: flex
     justify-content: space-between
@@ -48,7 +48,7 @@
                         height: 48px
 
 @media ( max-width: 1050px )
-    .sectionZEN-common-text
+    .ZEN-section__common-text
         display: flex
         flex-direction: column
         justify-content: center
@@ -92,7 +92,7 @@
                 justify-content: center
 
 @media ( max-width: 400px )
-    .sectionZEN-common-text-buttonApps
+    .ZEN-section__common-text-buttonApps
         display: block
         margin: 0 auto
 
