--- a/figma/ZEN/sass/section2.sass
+++ b/figma/ZEN/sass/section2.sass
@@ -1,6 +1,6 @@
 
 @media ( max-width: 1050px )
-    .sectionZEN-common-text
+    .ZEN-section__common-text
         display: flex
         flex-direction: column
         justify-content: center
