--- a/figma/ZEN/sass/sectionZEN-Cashbask.sass
+++ b/figma/ZEN/sass/sectionZEN-Cashbask.sass
@@ -1,4 +1,4 @@
-.sectionZEN-Cashbask
+.sectionZEN__Cashbask
     margin-top: 100px
     display: block
     &-h1
@@ -43,7 +43,7 @@
                 text-decoration: none
 
 @media ( max-width: 1050px )
-    .sectionZEN-Cashbask
+    .sectionZEN__Cashbask
 
         &-text
             width: 100%
