--- a/figma/ZEN/sass/ZenGlobal.sass
+++ b/figma/ZEN/sass/ZenGlobal.sass
@@ -5,11 +5,11 @@ html
 *::after
     box-sizing: inherit
 
-.containerZEN
+.ZEN-section
     width: 70%
     margin: 0 auto
 
-.sectionZEN-common
+.ZEN-section__common
     margin-top: 15px
     display: flex
     justify-content: space-between
@@ -31,29 +31,29 @@ html
             font-size: 18px
             transition: 0.5s
 
-.sectionZEN-img
+.ZEN-section__img
     img
         height: 100%
         width: 100%
         object-fit: cover
 
 @media ( max-width: 1428px)
-    .sectionZEN-common
+    .ZEN-section__common
         display: flex
         flex-direction: column
 
 @media ( max-width: 1050px)
-    .containerZEN
+    .ZEN-section
         width: 100%
         height: 100%
 
-    .sectionZEN-img
+    .ZEN-section__img
         position: absolute
         img
             max-height: 100%
             max-width: 100%
 
-    .sectionZEN-common-text
+    .ZEN-section__common-text
         margin: 0 auto
         z-index: 2
         margin-left: 0
