--- a/figma/ZEN/sass/company.sass
+++ b/figma/ZEN/sass/company.sass
@@ -1,14 +1,14 @@
-.company
+.ZEN-company
     width: 100%
     height: 100%
     display: block
 
-    .company-all
+    &__all
         display: flex
         flex-wrap: wrap
         justify-content: space-between
 
-        .company-png
+        .ZEN-company__png
             margin-top: 20px
             width: 300px
             height: 100px
@@ -24,5 +24,5 @@
                     transform: scale(1.2)
 
 @media ( max-width: 1050px )
-    .company-all
+    .ZEN-company__all
         justify-content: center !important
