--- a/figma/ZEN/sass/sectionZEN-Cashbask.sass
+++ b/figma/ZEN/sass/sectionZEN-Cashbask.sass
@@ -18,6 +18,7 @@
         padding-bottom: 58px
         padding-top: 20px
         transition: 0.5s
+        padding: 9px
 
     &-button
         width: 237px
