--- a/sass/style.sass
+++ b/sass/style.sass
@@ -49,3 +49,6 @@
 @import "../figma/ZEN/sass/headerNew"
 @import "../figma/SOS/sass/footerSOS.sass"
 @import "../figma/SOS/sass/headerSOS"
+
+@import "../Andrusha-main/sass/catalog"
+@import "../Andrusha-main/sass/education"
