--- a/figma/ZEN/sass/ZenGlobal.sass
+++ b/figma/ZEN/sass/ZenGlobal.sass
@@ -38,20 +38,32 @@ html
         object-fit: cover
 
 @media ( max-width: 1428px)
+
     .ZEN-section__common
         display: flex
         flex-direction: column
+
+        &:nth-child(2)
+            flex-direction: column-reverse
+
+        &:nth-child(7)
+
+            flex-direction: column-reverse !important
 
 @media ( max-width: 1050px)
     .ZEN-section
         width: 100%
         height: 100%
+        display: flex
+        flex-direction: column
+        justify-content: center
 
     .ZEN-section__img
-        position: absolute
         img
-            max-height: 100%
-            max-width: 100%
+            max-height: 50%
+            max-width: 50%
+            display: block
+            margin: 0 auto
 
     .ZEN-section__common-text
         margin: 0 auto
