--- a/figma/ZEN/sass/section1.sass
+++ b/figma/ZEN/sass/section1.sass
@@ -40,12 +40,14 @@
                     img
                         width: 167px
                         height: 48px
+                        border-radius: 0
 
             &-GooglePlay
                 a
                     img
                         width: 167px
                         height: 48px
+                        border-radius: 0
 
 @media ( max-width: 1050px )
     .ZEN-section__common-text
@@ -60,11 +62,13 @@
         &-text
             width: 100%
             height: 100%
+            padding: 8px
 
         &-h1
             display: block
             margin: 0 auto
             padding: 10% 0
+            padding: 9px
 
             &-1
                 text-align: center
@@ -73,15 +77,15 @@
 
         &-textUnder
             width: 100%
-            height: 80px
+            height: 100%
             margin-top: 30px
             text-align: center
+            padding: 9px
 
         &-buttonApps
             display: flex
-            /** flex-direction: column **/
             justify-content: space-around
-            margin-top: 30px
+            padding: 20px
 
             &-AppStore a
                 display: flex
@@ -97,4 +101,4 @@
         margin: 0 auto
 
         &-GooglePlay
-            margin-top: 5px
+            margin-top: 10px
