--- a/figma/ZEN/sass/section8.sass
+++ b/figma/ZEN/sass/section8.sass
@@ -1,3 +1,7 @@
+.ZEN-section8-button
+    img
+        border-radius: 0
+
 @media ( max-width: 1050px)
     .ZEN-section8-button
         display: block
