fix animation main

--- a/Andrusha-main/sass/education.sass
+++ b/Andrusha-main/sass/education.sass
@@ -15,7 +15,7 @@
         border-radius: 20px
         text-align: center
         margin: 20px
-
+        transition: 0.5s all
         padding: 10px
 
         &:hover
