--- a/css/style.css
+++ b/css/style.css
@@ -1764,10 +1764,10 @@ html:hover .spider {
   overflow: hidden;
   background: black;
   color: white;
-  height: 780px;
+  height: 90vh;
   position: relative;
   padding-left: 10px;
-  width: 550px;
+  width: 78vh;
 }
 
 .status {
@@ -1776,7 +1776,7 @@ html:hover .spider {
 }
 
 .signal {
-  margin-right: 7px;
+  margin-right: 1vh;
   width: 20px;
   height: 10px;
 }
@@ -1791,7 +1791,6 @@ html:hover .spider {
 }
 
 .battery {
-  width: 8px;
   height: 5px;
   display: flex;
   justify-content: space-between;
@@ -1805,9 +1804,9 @@ html:hover .spider {
 .top-bar {
   display: flex;
   height: 90px;
-  width: 463px;
+  width: 100%;
   justify-content: space-between;
-  padding: 0 20px;
+  padding: 5px 0px;
 }
 
 .value {
@@ -1833,10 +1832,10 @@ html:hover .spider {
   cursor: pointer;
   display: flex;
   font-size: 45px;
-  height: 100px;
+  height: 75px;
   justify-content: center;
   transition: filter 0.3s;
-  width: 100px;
+  width: 75px;
 }
 .button.function {
   color: black;
@@ -1850,12 +1849,18 @@ html:hover .spider {
   grid-column: 1/span 2;
   justify-content: flex-start;
   padding-left: 43px;
-  width: 250px;
+  width: 210px;
 }
 .button:active, .button:focus {
   filter: brightness(133%);
 }
 
+@media (max-width: 641px) {
+  .calculator-on-iPhone-JS {
+    height: 100%;
+    width: 100%;
+  }
+}
 .TicTacToe-Wrapper {
   color: #545454;
   display: flex;
