--- a/css/style.css
+++ b/css/style.css
@@ -1767,7 +1767,7 @@ html:hover .spider {
   height: 90vh;
   position: relative;
   padding-left: 10px;
-  width: 78vh;
+  width: 50vh;
 }
 
 .status {
@@ -1831,7 +1831,7 @@ html:hover .spider {
   border-radius: 50%;
   cursor: pointer;
   display: flex;
-  font-size: 45px;
+  font-size: 36px;
   height: 75px;
   justify-content: center;
   transition: filter 0.3s;
@@ -1859,6 +1859,49 @@ html:hover .spider {
   .calculator-on-iPhone-JS {
     height: 100%;
     width: 100%;
+  }
+}
+@media (max-width: 520px) {
+  .calculator-on-iPhone-JS {
+    overflow: hidden;
+  }
+
+  .top-bar .button.number-0 {
+    width: 172px;
+  }
+  .top-bar .button {
+    font-size: 30px;
+  }
+
+  .value {
+    margin-top: 20px;
+    font-size: 80px !important;
+  }
+}
+@media (max-width: 450px) {
+  .calculator-on-iPhone-JS .top-bar {
+    height: 40px;
+  }
+  .calculator-on-iPhone-JS .top-bar .value {
+    font-size: 40px;
+  }
+
+  .buttons-container {
+    padding: 0 10px;
+    grid-gap: 10px;
+  }
+  .buttons-container .button {
+    width: auto;
+  }
+}
+@media (max-width: 390px) {
+  .button {
+    font-size: 24px;
+  }
+}
+@media (max-width: 380px) {
+  .button {
+    height: 55px;
   }
 }
 .TicTacToe-Wrapper {
