--- a/app/Calc-on-iPhone-JS/sass/Calc-on-iPhone-JS.sass
+++ b/app/Calc-on-iPhone-JS/sass/Calc-on-iPhone-JS.sass
@@ -73,6 +73,12 @@
         color: black
         background: #a5a5a5
 
+        &.ac
+            font-size: 28px
+
+        &.percent
+            font-size: 28px
+
     &.operator
         background: #f1a33c
 
