--- a/figma/ZEN/sass/ZenGlobal.sass
+++ b/figma/ZEN/sass/ZenGlobal.sass
@@ -38,6 +38,10 @@ html
         object-fit: cover
 
 @media ( max-width: 1428px)
+    .ZEN-section__img
+        img
+            max-height: 553px
+            max-width: 585px
 
     .ZEN-section__common
         display: flex
